# research_automation

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  celery_worker.py  config.py  main.py  schemas.py
app/api/: chat.py  upload.py
app/db/: __init__.py  db_utils.py  index.py
app/services/: chat_service.py  ingest.py
app/utils/: celery_tasks.py  embeddings.py
docs/: data_model.md
